--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,8 @@
 :root {
   --border-radius: 4px;
-  --color-text: #333;
-  --color-primary: #7026b9;
-  --color-code-bg: #fff4db;
+  --color-text: rgb(241, 241, 241);
+  --color-primary: #9c7ebb;
+  --color-code-bg: #262635;
   --color-code: #8a6534;
   --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
